--- a/detalle_juego_2.html
+++ b/detalle_juego_2.html
@@ -20,7 +20,7 @@
   <main>
     <h2>Minecraft</h2>
     <img src="IMG/juego_2.jpg" alt="Minecraft" class="imagen-detalle">
-    <p><strong>Género:</strong> Adventura</p>
+    <p><strong>Género:</strong> Aventura</p>
     <p><strong>Plataforma:</strong> PC, Consola</p>
     <p>Crea todo lo que puedas imaginar, descubre los misterios espeluznantes y sobrevive la noche en el último juego sandbox. En Minecraft, cada partida es diferente y te esperan aventuras inolvidables a la vuelta de la esquina. Explora y crea tu camino a un mundo infinito al que le puedes dar forma bloque a bloque.</p>
   </main>
